2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/streams/strsubr.h: correct synchronization queue lists

	* src/drivers/echo.c: register qlock option
	* src/drivers/nuls.c: register qlock option
	* src/kernel/strreg.c: register qlock option
	* src/kernel/strsched.c: register qlock option
	* src/modules/nullmod.c: register qlock option
	* src/modules/testmod.c: register qlock option

2007-03-24  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/streams/strconf.h: export (un)register_strsync
	* include/sys/streams/stream.h: define D_LIS flag again
	* include/sys/streams/strsubr.h: add sq_info member to syncq
	* src/kernel/strreg.c: correct and export register_strsync
	* src/kernel/strsad.c: correct som GPL exports
	* src/kernel/strsched.c: add sq_locate for elsewhere lookup
	  - clean up synchronization functions
	* src/kernel/strsched.h: add sq_locate, correct in_streams()
	* src/kernel/strutil.c: GPL export

	* doc/man/man9/cdevsw.9.man: document sqinfo member
	* doc/man/man9/devnode.9.man: document sqinfo member
	* doc/man/man9/fmodsw.9.man: document sqinfo member
	* doc/man/man9/register_strdev.9.man: document sqlvl and sqinfo member
	* doc/man/man9/register_strmod.9.man: document sqlvl and sqinfo member
	* include/sys/streams/stream.h: add sqinfo member

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: documented bug fixes
	* doc/manual/news.texi: documented bug fixes
	* src/modules/sth.c: stri_lock balance problem fixed
	* src/test/test-clone.c: report failed expectations
	* src/test/test-connld.c: report failed expectations
	* src/test/test-echo.c: report failed expectations
	* src/test/test-fifo.c: report failed expectations
	* src/test/test-log.c: report failed expectations
	* src/test/test-loop.c: report failed expectations
	* src/test/test-mux.c: report failed expectations
	* src/test/test-nsdev.c: report failed expectations
	* src/test/test-nuls.c: report failed expectations