@@ -1,5 +1,7 @@
 2007-03-25  Brian Bidulock  <bidulock@openss7.org>
 
+	* acinclude.m4: always enable syncrhonization and stats by default
+
 	* include/sys/streams/strsubr.h: correct synchronization queue lists
 
 	* src/drivers/echo.c: register qlock option
